--- a/css/la.css
+++ b/css/la.css
@@ -21,6 +21,37 @@ input:focus, textarea:focus, select:focus{ outline: 0; }
 
     z-index: 6;
 }
+.pop-up-content{
+
+	display: inline-block;
+
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translateX(-50%) translateY(-50%);
+
+	max-height: calc(100% - 25px);
+
+	background-color: var(--body-color);
+
+	border-radius: var(--border-radius);
+	padding: 20px;
+
+	box-sizing: border-box;
+
+	overflow-y: scroll;
+}
+.pop-up-content>.cross{
+
+	position: absolute;
+	top: 0;
+	right: 0;
+	padding: 10px;
+
+	max-width: 25px;
+	max-height: 25px;
+}
+
 .carousel{
 
 	width: 100%;
@@ -32,12 +63,32 @@ input:focus, textarea:focus, select:focus{ outline: 0; }
 }
 
 
+.checkbox-text{
 
+	display: inline;
+}
+.checkbox-text::selection{
+
+	color: inherit;
+	background-color: transparent;
+}
 
 
 .euro::after{
 
     content: '\20AC';
+}
+.colon-after::after{
+
+	content: ': ';
+}
+.between-brackets::before{
+
+	content: '(';
+}
+.between-brackets::after{
+
+	content: ')';
 }
 
 
@@ -48,17 +99,32 @@ input:focus, textarea:focus, select:focus{ outline: 0; }
     display: flex;
 
     justify-content: space-between;
+	align-items: center;
 }
 .child-even{
 
     display: flex;
 
     justify-content: space-evenly;
+	align-items: center;
 }
 
+.start-text{
+
+	text-align: start;
+}
 .center-text{
 
     text-align: center;
+}
+.end-text{
+
+	text-align: end;
+}
+.center-vertical{
+
+	vertical-align: middle;
+	align-items: center;
 }
 .center-abs-xy{
 
@@ -80,12 +146,19 @@ input:focus, textarea:focus, select:focus{ outline: 0; }
     transform: translateY(-50%);
 }
 
+.dont-break-text{
+
+	white-space: nowrap;
+}
+
 .hidden{ display: none; }
+.invisible{ visibility: hidden; }
 
 .row{
 
     display: flex;
     flex-wrap: wrap;
+	box-sizing: border-box;
 }
 .row.space-5>div{ padding: 0 5px; } .row.space-10>div{ padding: 0 10px; } .row.space-25>div{ padding: 0 25px; } .row.space-50>div{ padding: 0 25px; } .row.space-100>div{ padding: 0 25px; }
 .row[class*='space-']>div{
@@ -109,10 +182,35 @@ input:focus, textarea:focus, select:focus{ outline: 0; }
 
     display: inline;
     vertical-align: middle;
-    max-width: 20px;
-    font-size: 30px;
+    max-width: 23px;
+	max-height: 23px;
 
     cursor: pointer;
+}
+.ico.small{
+
+	max-width: 18px;
+	max-height: 18px;
+}
+.ico.big{
+
+	max-width: 30px;
+	max-height: 30px;
+}
+.ico.giant{
+
+	max-width: 37px;
+	max-height: 37px;
+}
+.ico.so-giant{
+
+	max-width: 50px;
+	max-height: 50px;
+}
+.ico.titanic{
+
+	max-width: 100px;
+	max-height: 100px;
 }
 
 .ico.dot.full::before{
@@ -144,24 +242,29 @@ input:focus, textarea:focus, select:focus{ outline: 0; }
 .ico.eye{ content: url('../../img/ico/eye.png'); }
 .ico.eye-hidden{ content: url('../../img/ico/eye_hidden.png'); }
 
+.ico.copy{ content: url('../../img/ico/copy.png'); }
+.ico.paste{ content: url('../../img/ico/paste.png'); }
+.ico.duplicate{ content: url('../../img/ico/duplicate.png'); }
+
 .ico.red-cross{ content: url('../../img/ico/cross_red.png'); }
 .ico.pencil{ content: url('../../img/ico/pencil.png'); }
 .ico.gear{ content: url('../../img/ico/gear.png'); }
 .ico.green-check{ content: url('../../img/ico/check_green.png'); }
 .ico.move-arrows{ content: url('../../img/ico/move_arrows.png'); }
 
-.ico.drag-grid{
+.ico.grip{
 
     max-width: 20px;
 
-    content: url('../../img/ico/drag_grid.png');
-
-    cursor: grab;
-}
-.ico.drag-grid:active{
+    content: url('../../img/ico/grip.png');
 
     cursor: grabbing;
 }
+.ico.grip:active{
+
+    cursor: grabbing;
+}
+
 
 
 /* edit field ---------------- */
@@ -172,68 +275,181 @@ input:focus, textarea:focus, select:focus{ outline: 0; }
     justify-content: space-between;
     align-items: center;
 }
-.edit-field>.edit-field-texts{
+.edit-field .edit-field-title{
 
-    width: 100%;
+	font-weight: bold;
 
-    margin-right: 10px;
+	margin-right: 5px;
+
+	white-space: nowrap;
 }
-.edit-field .input{
+.edit-field .edit-field-title::after{
+
+	content: ':';
+}
+.edit-field input{
 
     width: 100%;
     box-sizing: border-box;
 
     font-size: 1em;
+
+	background-color: transparent;
+
+	margin-right: 5px;
+	border-color: transparent;
 }
-.edit-field p{
+.edit-field input:disabled{
 
-    margin: 0;
+	color: black;
+}
+.edit-field.editing input{
+
+	background-color: initial;
+
+	border-color: initial;
+
+	transition: 0.5s;
 }
 
 
+.flex-center{
 
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.flex-vertical{
+
+	display: flex;
+	flex-direction: column;
+}
+.inline{ display: inline; }
+.block{ display: block; }
 .i-b{ display: inline-block; }
+.flex{ display: flex; }
+
 .w-100{ width: 100%; }
 .h-100{ height: 100%; }
+.w-75{ width: 75%; }
+.h-75{ height: 75%; }
+.w-50{ width: 50%; }
+.h-50{ height: 50%; }
+.w-25{ width: 25%; }
+.h-25{ height: 25%; }
 
 /* margin */
-.m-0{ margin: 0; } .m-5{ margin: 5px; } .m-10{ margin: 10px; } .m-15{ margin: 15px; } .m-20{ margin: 20px; } .m-50{ margin: 50px; } .m-100{ margin: 100px; }
-.m-t-0{ margin-top: 0; } .m-t-5{ margin-top: 5px; } .m-t-10{ margin-top: 10px; } .m-t-15{ margin-top: 15px; } .m-t-20{ margin-top: 20px; } .m-t-50{ margin-top: 50px; } .m-t-100{ margin-top: 100px; }
-.m-r-0{ margin-right: 0; } .m-r-5{ margin-right: 5px; } .m-r-10{ margin-right: 10px; } .m-r-15{ margin-right: 15px; } .m-r-20{ margin-right: 20px; } .m-r-50{ margin-right: 50px; } .m-r-100{ margin-right: 100px; }
-.m-b-0{ margin-bottom: 0; } .m-b-5{ margin-bottom: 5px; } .m-b-10{ margin-bottom: 10px; } .m-b-15{ margin-bottom: 15px; } .m-b-20{ margin-bottom: 20px; } .m-b-50{ margin-bottom: 50px; } .m-b-100{ margin-bottom: 100px; }
-.m-l-0{ margin-left: 0; } .m-l-5{ margin-left: 5px; } .m-l-10{ margin-left: 10px; } .m-l-15{ margin-left: 15px; } .m-l-20{ margin-left: 20px; } .m-l-50{ margin-left: 50px; } .m-l-100{ margin-left: 100px; }
-/* border */
-.b-0{ border: 0; } .b-5{ border: 5px; } .b-10{ border: 10px; } .b-15{ border: 15px; } .b-20{ border: 20px; } .b-50{ border: 50px; } .b-100{ border: 100px; }
-.b-t-0{ border-top: 0; } .b-t-5{ border-top: 5px; } .b-t-10{ border-top: 10px; } .b-t-15{ border-top: 15px; } .b-t-20{ border-top: 20px; } .b-t-50{ border-top: 50px; } .b-t-100{ border-top: 100px; }
-.b-r-0{ border-right: 0; } .b-r-5{ border-right: 5px; } .b-r-10{ border-right: 10px; } .b-r-15{ border-right: 15px; } .b-r-20{ border-right: 20px; } .b-r-50{ border-right: 50px; } .b-r-100{ border-right: 100px; }
-.b-b-0{ border-bottom: 0; } .b-b-5{ border-bottom: 5px; } .b-b-10{ border-bottom: 10px; } .b-b-15{ border-bottom: 15px; } .b-b-20{ border-bottom: 20px; } .b-b-50{ border-bottom: 50px; } .b-b-100{ border-bottom: 100px; }
-.b-l-0{ border-left: 0; } .b-l-5{ border-left: 5px; } .b-l-10{ border-left: 10px; } .b-l-15{ border-left: 15px; } .b-l-20{ border-left: 20px; } .b-l-50{ border-left: 50px; } .b-l-100{ border-left: 100px; }
+.m-0{margin: 0;}			.m-5{margin: 5px;} 			.m-10{margin: 10px;} 			.m-15{margin: 15px;} 			.m-20{margin: 20px;} 			.m-25{margin: 25px;} 			.m-50{margin: 50px;} 			.m-100{margin: 100px;}
+.mt-0{margin-top: 0;}		.mt-5{margin-top: 5px;} 	.mt-10{margin-top: 10px;} 		.mt-15{margin-top: 15px;} 		.mt-20{margin-top: 20px;}		.mt-25{margin-top: 25px;} 		.mt-50{margin-top: 50px;} 		.mt-100{margin-top: 100px;}
+.mr-0{margin-right: 0;}		.mr-5{margin-right: 5px;} 	.mr-10{margin-right: 10px;}		.mr-15{margin-right: 15px;} 	.mr-20{margin-right: 20px;}		.mr-25{margin-right: 25px;} 	.mr-50{margin-right: 50px;} 	.mr-100{margin-right: 100px;}
+.mb-0{margin-bottom: 0;}	.mb-5{margin-bottom: 5px;}	.mb-10{margin-bottom: 10px;} 	.mb-15{margin-bottom: 15px;} 	.mb-20{margin-bottom: 20px;}	.mb-25{margin-bottom: 25px;} 	.mb-50{margin-bottom: 50px;} 	.mb-100{margin-bottom: 100px;}
+.ml-0{margin-left: 0;}		.ml-5{margin-left: 5px;} 	.ml-10{margin-left: 10px;} 		.ml-15{margin-left: 15px;} 		.ml-20{margin-left: 20px;}		.ml-25{margin-left: 25px;} 		.ml-50{margin-left: 50px;} 		.ml-100{margin-left: 100px;}
 /* padding */
-.p-0{ padding: 0; } .p-5{ padding: 5px; } .p-10{ padding: 10px; } .p-15{ padding: 15px; } .p-20{ padding: 20px; } .p-50{ padding: 50px; } .p-100{ padding: 100px; }
-.p-t-0{ padding-top: 0; } .p-t-5{ padding-top: 5px; } .p-t-10{ padding-top: 10px; } .p-t-15{ padding-top: 15px; } .p-t-20{ padding-top: 20px; } .p-t-50{ padding-top: 50px; } .p-t-100{ padding-top: 100px; }
-.p-r-0{ padding-right: 0; } .p-r-5{ padding-right: 5px; } .p-r-10{ padding-right: 10px; } .p-r-15{ padding-right: 15px; } .p-r-20{ padding-right: 20px; } .p-r-50{ padding-right: 50px; } .p-r-100{ padding-right: 100px; }
-.p-b-0{ padding-bottom: 0; } .p-b-5{ padding-bottom: 5px; } .p-b-10{ padding-bottom: 10px; } .p-b-15{ padding-bottom: 15px; } .p-b-20{ padding-bottom: 20px; } .p-b-50{ padding-bottom: 50px; } .p-b-100{ padding-bottom: 100px; }
-.p-l-0{ padding-left: 0; } .p-l-5{ padding-left: 5px; } .p-l-10{ padding-left: 10px; } .p-l-15{ padding-left: 15px; } .p-l-20{ padding-left: 20px; } .p-l-50{ padding-left: 50px; } .m-l-100{ padding-left: 100px; }
+.p-0{padding: 0;}			.p-5{padding: 5px;} 		.p-10{padding: 10px;} 			.p-15{padding: 15px;} 			.p-20{padding: 20px;} 			.p-25{padding: 25px;} 			.p-50{padding: 50px;} 			.p-100{padding: 100px;}
+.pt-0{padding-top: 0;}		.pt-5{padding-top: 5px;} 	.pt-10{padding-top: 10px;} 		.pt-15{padding-top: 15px;} 		.pt-20{padding-top: 20px;}		.pt-25{padding-top: 25px;} 		.pt-50{padding-top: 50px;} 		.pt-100{padding-top: 100px;}
+.pr-0{padding-right: 0;}	.pr-5{padding-right: 5px;}	.pr-10{padding-right: 10px;} 	.pr-15{padding-right: 15px;} 	.pr-20{padding-right: 20px;}	.pr-25{padding-right: 25px;} 	.pr-50{padding-right: 50px;} 	.pr-100{padding-right: 100px;}
+.pb-0{padding-bottom: 0;}	.pb-5{padding-bottom: 5px;}	.pb-10{padding-bottom: 10px;}	.pb-15{padding-bottom: 15px;}	.pb-20{padding-bottom: 20px;}	.pb-25{padding-bottom: 25px;}	.pb-50{padding-bottom: 50px;}	.pb-100{padding-bottom: 100px;}
+.pl-0{padding-left: 0;}		.pl-5{padding-left: 5px;}	.pl-10{padding-left: 10px;} 	.pl-15{padding-left: 15px;} 	.pl-20{padding-left: 20px;}		.pl-25{padding-left: 25px;} 	.pl-50{padding-left: 50px;} 	.ml-100{padding-left: 100px;}
 
+/* font size */
+.fs-10{ font-size: 10px; } .fs-11{ font-size: 11px; } .fs-12{ font-size: 12px; } .fs-14{ font-size: 14px; } .fs-16{ font-size: 16px; } .fs-18{ font-size: 18px; } .fs-20{ font-size: 20px; } .fs-22{ font-size: 22px; } .fs-24{ font-size: 24px; } .fs-26{ font-size: 26px; } .fs-28{ font-size: 28px; } .fs-30{ font-size: 30px; } .fs-35{ font-size: 35px; } .fs-40{ font-size: 40px; } .fs-45{ font-size: 45px; } .fs-50{ font-size: 50px; } .fs-55{ font-size: 55px; } .fs-60{ font-size: 60px; } .fs-70{ font-size: 70px; } .fs-80{ font-size: 80px; } .fs-90{ font-size: 90px; } .fs-100{ font-size: 100px; }
+
+
+
+
+/* animations ---------------- */
+@keyframes rotate{
+
+	from { transform: rotate(0); }
+	50% { transform: rotate(180deg); }
+	to { transform: rotate(360deg); }
+}
+.rotate{
+
+    animation-name: rotate;
+    animation-duration:	5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+.rotate.fast{ animation-duration: 2s; }
+@keyframes rotate-backwards{
+
+	from{ transform: rotate(0); }
+	50% { transform: rotate(-180deg); }
+	to 	{ transform: rotate(-360deg); }
+}
+.rotate-backwards{
+
+    animation-name: rotate-backwards;
+    animation-duration:	5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+.rotate-backwards.fast{ animation-duration: 2s; }
+
+@keyframes turn{
+
+	from{ transform: rotate3d(0, 1, 0, 0); }
+	50% { transform: rotate3d(0, 1, 0, -180deg); }
+	to 	{ transform: rotate3d(0, 1, 0, -360deg); }
+}
+.turn{
+
+    animation-name: turn;
+    animation-duration:	5s;
+	animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+.turn.fast{ animation-duration: 2s; }
+
+.swing{ transform-origin: top center; }
+@keyframes swing{
+
+	from { transform: rotate(-10deg); }
+	50% { transform: rotate(10deg); }
+	to { transform: rotate(-10deg); }
+}
+.swing{
+
+    animation-name: swing;
+    animation-duration:	3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: cubic-bezier(0.65, 0, 0.35, 1);
+}
 
 
 
 /* mobile ----------- */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 768px) {
+
+	.desktop-only{
+
+		display: none;
+	}
+
+	.pop-up-content{
+
+		width: 95vw;
+	}
 
     .col-sm-1{ flex: 8.333334%; max-width: 8.333334%; } .col-sm-2{ flex: 16.666667%; max-width: 16.666667%; } .col-sm-3{ flex: 25%; max-width: 25%; } .col-sm-4{ flex: 33.333334%; max-width: 33.333334%; } .col-sm-5{ flex: 41.666667%; max-width: 41.666667%; } .col-sm-6{ flex: 50%; max-width: 50%; } .col-sm-7{ flex: 58.333334%; max-width: 58.333334%; } .col-sm-8{ flex: 66.666667%; max-width: 66.666667%; } .col-sm-9{ flex: 75%; max-width: 75%; } .col-sm-10{ flex: 83.333334%; max-width: 83.333334%; } .col-sm-11{ flex: 91.666667%; max-width: 91.666667%; } .col-sm-12{ flex: 100%; max-width: 100%; }
-
 }
 
 /* desktop ----------- */
-@media only screen and (min-width: 601px) {
+@media only screen and (min-width: 769px) {
+
+	.mobile-only{
+
+		display: none;
+	}
 
     /* elements ----------------------------------- */
     button:hover{ cursor: pointer; }
     a:hover{ cursor: pointer; }
 
-	.checkbox-text{ cursor: default; }
+	.checkbox-text{ cursor: pointer; }
     .pointer{ cursor: pointer; }
+	.cursor-rock{ cursor: url(../../img/ico/rock.cur) 3 3, auto; }
 
     .col-lg-1{ flex: 8.333334%; max-width: 8.333334%; } .col-lg-2{ flex: 16.666667%; max-width: 16.666667%; } .col-lg-3{ flex: 25%; max-width: 25%; } .col-lg-4{ flex: 33.333334%; max-width: 33.333334%; } .col-lg-5{ flex: 41.666667%; max-width: 41.666667%; } .col-lg-6{ flex: 50%; max-width: 50%; } .col-lg-7{ flex: 58.333334%; max-width: 58.333334%; } .col-lg-8{ flex: 66.666667%; max-width: 66.666667%; } .col-lg-9{ flex: 75%; max-width: 75%; } .col-lg-10{ flex: 83.333334%; max-width: 83.333334%; } .col-lg-11{ flex: 91.666667%; max-width: 91.666667%; } .col-lg-12{ flex: 100%; max-width: 100%; }
 
