--- a/css/la.css
+++ b/css/la.css
@@ -49,6 +49,9 @@ input:focus, textarea:focus, select:focus{ outline: 0; }
 .mb-0{margin-bottom: 0;}	.mb-1{margin-bottom: 1px;}	.mb-2{margin-bottom: 2px;}	.mb-3{margin-bottom: 3px;}	.mb-4{margin-bottom: 4px;}	.mb-5{margin-bottom: 5px;}	.mb-10{margin-bottom: 10px;} 	.mb-15{margin-bottom: 15px;} 	.mb-20{margin-bottom: 20px;}	.mb-25{margin-bottom: 25px;} 	.mb-50{margin-bottom: 50px;} 	.mb-100{margin-bottom: 100px;}
 .ml-0{margin-left: 0;}		.ml-1{margin-left: 1px;} 	.ml-2{margin-left: 2px;} 	.ml-3{margin-left: 3px;} 	.ml-4{margin-left: 4px;} 	.ml-5{margin-left: 5px;} 	.ml-10{margin-left: 10px;} 		.ml-15{margin-left: 15px;} 		.ml-20{margin-left: 20px;}		.ml-25{margin-left: 25px;} 		.ml-50{margin-left: 50px;} 		.ml-100{margin-left: 100px;}
 
+/* border radius */
+.br-0{border-radius: 0;}	.br-1{border-radius: 1px;} 	.br-2{border-radius: 2px;} 	.br-3{border-radius: 3px;} 	.br-4{border-radius: 4px;} 	.br-5{border-radius: 5px;} 	.br-10{border-radius: 10px;} 	.br-15{border-radius: 15px;} 	.br-20{border-radius: 20px;} 	.br-25{border-radius: 25px;} 	.br-50{border-radius: 50px;} 	.br-100{border-radius: 100px;}
+
 /* padding */
 .p-0{padding: 0;}			.p-1{padding: 1px;} 		.p-2{padding: 2px;} 		.p-3{padding: 3px;} 		.p-4{padding: 4px;} 		.p-5{padding: 5px;} 		.p-10{padding: 10px;} 			.p-15{padding: 15px;} 			.p-20{padding: 20px;} 			.p-25{padding: 25px;} 			.p-50{padding: 50px;} 			.p-100{padding: 100px;}
 .pt-0{padding-top: 0;}		.pt-1{padding-top: 1px;} 	.pt-2{padding-top: 2px;} 	.pt-3{padding-top: 3px;} 	.pt-4{padding-top: 4px;} 	.pt-5{padding-top: 5px;} 	.pt-10{padding-top: 10px;} 		.pt-15{padding-top: 15px;} 		.pt-20{padding-top: 20px;}		.pt-25{padding-top: 25px;} 		.pt-50{padding-top: 50px;} 		.pt-100{padding-top: 100px;}
@@ -396,12 +399,12 @@ input:focus, textarea:focus, select:focus{ outline: 0; }
 .pop-up-container{
 
 	display: inline-block;
+	text-align: center;
 
 	position: absolute;
 	top: 50%;
 	left: 50%;
 	transform: translateX(-50%) translateY(-50%);
-
 
     max-width: calc(100vw - 20px);
     max-height: calc(100vh - 20px);
@@ -428,10 +431,6 @@ input:focus, textarea:focus, select:focus{ outline: 0; }
     font-size: 34px;
 
     margin: 0 0 20px;
-}
-.pop-up-container .content{
-
-	text-align: center;
 }
 
 
