--- a/css/la.css
+++ b/css/la.css
@@ -37,7 +37,8 @@ input {
     padding: 2px 4px 3px;
     border: solid 1px black;
     border-radius: 3px;
-    margin-bottom: 10px;
+    margin-top: 1px;
+    margin-bottom: 5px;
     
     outline: none;
     box-sizing: border-box;
