--- a/css/la.css
+++ b/css/la.css
@@ -218,7 +218,18 @@ input:focus, textarea:focus, select:focus {
 .ico.big-9 { max-width: 600px; max-height: 600px; }
 
 
-/* animations aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa */
+/* animations aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa */
+.fade-in { animation: fadeIn 400ms forwards; }
+.fade-in-slow { animation: fadeIn 600ms forwards; }
+.fade-in-fast { animation: fadeIn 200ms forwards; }
+.fade-out { animation: fadeIn 400ms backwards; }
+.fade-out-slow { animation: fadeIn 600ms backwards; }
+.fade-out-fast { animation: fadeIn 200ms backwards; }
+@keyframes fadeIn {
+  from { opacity: 0; }
+  to { opacity: 1; }
+}
+
 @keyframes rotate { 
     from { transform: rotate(0); }
     50% { transform: rotate(180deg); }
@@ -398,7 +409,7 @@ input:focus, textarea:focus, select:focus {
     text-align: center; 
 
     position: absolute; 
-    top: 35%; 
+    top: 40%; 
     left: 50%; 
     transform: translateX(-50%) translateY(-50%); 
 
@@ -416,8 +427,8 @@ input:focus, textarea:focus, select:focus {
 }
 .popup-container > .red-cross, .pop-up-container > .red-cross {
     position: absolute; 
-    top: 0; 
-    right: 0; 
+    top: 5px; 
+    right: 5px; 
 
     z-index: 999; 
 }
