--- a/css/la.css
+++ b/css/la.css
@@ -469,6 +469,8 @@ input:focus, textarea:focus, select:focus {
 
     box-sizing: border-box;
     overflow-wrap: break-word;
+
+    z-index: 7;
 }
 .toast-top    { top: 9%; }
 .toast-middle { top: 50%; }
