--- a/css/la.css
+++ b/css/la.css
@@ -399,7 +399,7 @@ input:focus, textarea:focus, select:focus {
     text-align: center; 
 
     position: absolute; 
-    top: 40%; 
+    top: 50%; 
     left: 50%; 
     transform: translateX(-50%) translateY(-50%); 
 
@@ -413,7 +413,7 @@ input:focus, textarea:focus, select:focus {
 
     box-sizing: border-box; 
 
-    overflow-y: scroll; 
+    overflow-y: auto; 
 }
 .popup-container > .red-cross, .pop-up-container > .red-cross {
     position: absolute; 
