--- a/css/la.css
+++ b/css/la.css
@@ -36,7 +36,7 @@ h6 {
 input, textarea {
     font-size: 0.95em;
 
-    padding: 3px 4px 3px;
+    padding: 4px 6px;
     border: solid 1px black;
     margin-top: 1px;
     margin-bottom: 5px;
