--- a/css/la.css
+++ b/css/la.css
@@ -416,7 +416,8 @@ input:focus, textarea:focus, select:focus {
     z-index: 6; 
 }
 .popup-container, .pop-up-container {
-    display: inline-block; 
+    display: flex;
+    flex-direction: column;
     text-align: center; 
 
     position: absolute; 
@@ -443,33 +444,36 @@ input:focus, textarea:focus, select:focus {
 
     z-index: 999; 
 }
-.popup-container > .title, .pop-up-container > .title {
+.popup-container > .inner, .pop-up-container > .inner {
+    overflow-y: scroll;
+}
+.popup-container > .inner > .title, .pop-up-container > .inner > .title {
     font-size: 40px; 
 
     margin-top: 5px;
     margin-bottom: 20px; 
 }
-.popup-container:has(.subtitle) > .title, .pop-up-container:has(.subtitle) > .title {
+.popup-container:has(.subtitle) > .inner > .title, .pop-up-container:has(.subtitle) > .inner > .title {
     margin-bottom: 10px; 
 }
-.popup-container > .subtitle, .pop-up-container > .subtitle {
+.popup-container > .inner > .subtitle, .pop-up-container > .inner > .subtitle {
     font-size: 26px; 
 
     margin-bottom: 15px; 
 }
-.popup-container > .content, .pop-up-container > .content {
+.popup-container > .inner > .content, .pop-up-container > .inner > .content {
     font-size: 20px;
     margin-bottom: 35px;
 }
-.popup-container > .buttons {
+.popup-container > .inner > .buttons {
     display: flex;
     justify-content: space-evenly;
 }
-.popup-container > .buttons > .ok-button {
+.popup-container > .inner > .buttons > .ok-button {
     font-size: 1.1em;
     background-color: limegreen;
 }
-.popup-container > .buttons > .cancel-button {
+.popup-container > .inner > .buttons > .cancel-button {
     font-size: 1.1em;
     background-color: red;
 }
