--- a/css/la.css
+++ b/css/la.css
@@ -1,3 +1,7 @@
+/* Projects using CDN
+    - TrasteRosCobo
+*/
+
 /* Elements --------------------------------------------------------------------------------------- */
 body {
     margin: 0; 
