--- a/css/la.css
+++ b/css/la.css
@@ -451,16 +451,16 @@ input:focus, textarea:focus, select:focus {
 .popup-container > .inner, .pop-up-container > .inner {
     overflow-y: scroll;
 }
-.popup-container > .inner > .title, .pop-up-container > .inner > .title {
+.popup-container .title, .pop-up-container .title {
     font-size: 40px; 
 
     margin-top: 5px;
     margin-bottom: 20px; 
 }
-.popup-container:has(.subtitle) > .inner > .title, .pop-up-container:has(.subtitle) > .inner > .title {
+.popup-container:has(.subtitle) .title, .pop-up-container:has(.subtitle) .title {
     margin-bottom: 10px; 
 }
-.popup-container > .inner > .subtitle, .pop-up-container > .inner > .subtitle {
+.popup-container .subtitle, .pop-up-container .subtitle {
     font-size: 26px; 
     margin-bottom: 15px; 
 }
