--- a/css/la.css
+++ b/css/la.css
@@ -15,48 +15,43 @@ button {
     cursor: pointer;
 }
 
-p { 
-    margin: 0; 
-}
-h1 { 
-    margin: 0; 
-}
-h2 { 
-    margin: 0; 
-}
-h3 { 
-    margin: 0; 
-}
-h4 { 
-    margin: 0; 
-}
-h5 { 
-    margin: 0; 
-}
-h6 { 
-    margin: 0; 
-}
+p { margin: 0; }
+h1 { margin: 0; font-weight: bold; font-size: 1.6em; }
+h2 { margin: 0; font-weight: bold; font-size: 1.4em; }
+h3 { margin: 0; font-weight: 600; font-size: 1.2em; }
+h4 { margin: 0; font-weight: 500; }
+h5 { margin: 0; }
+h6 { margin: 0; }
 
 input, textarea {
-    font-size: 0.9em;
+    font-size: 0.95em;
 
     padding: 4px 6px;
     border: solid 1px black;
     margin-top: 1px;
-    margin-bottom: 5px;
     
     outline: none;
     box-sizing: border-box;
 }
 input {
-    border-radius: 7px;
+    border-radius: 5px;
 }
 textarea {
-    border-radius: 10px;
+    border-radius: 9px;
 }
-
 input:focus, textarea:focus, select:focus {
     outline: none;
+}
+
+select {
+    font-size: 0.95em;
+
+    padding: 3px 9px 2px 4px;
+    border-radius: 5px;
+    margin-top: 1px;
+
+    outline: none;
+    box-sizing: border-box;
 }
 
 /* scroll ----------------*/
