--- a/css/la.css
+++ b/css/la.css
@@ -16,12 +16,9 @@ button {
 }
 
 p { margin: 0; }
-h1 { margin: 0; font-weight: bold; font-size: 1.6em; }
-h2 { margin: 0; font-weight: bold; font-size: 1.4em; }
-h3 { margin: 0; font-weight: 600; font-size: 1.2em; }
-h4 { margin: 0; font-weight: 500; }
-h5 { margin: 0; }
-h6 { margin: 0; }
+h1 { margin: 0; font-weight: bold; }
+h2 { margin: 0; font-weight: bold; }
+h3 { margin: 0; font-weight: 600; }
 
 input, textarea {
     font-size: 0.95em;
@@ -68,8 +65,8 @@ select {
 .h-100 { height: 100%; } .h-75 { height: 75%; } .h-50 { height: 50%; } .h-25 { height: 25%; }
 
 /* font size */
-.fs-smaller { font-size: smaller; } .fs-smaller-2 { font-size: 0.6em; } .fs-smaller-3 { font-size: 0.4em; }
-.fs-larger { font-size: larger; } .fs-larger-2 { font-size: 1.4em; } .fs-larger-3 { font-size: 1.6em; }
+.fs-smaller { font-size: 0.9em; } .fs-smaller-2 { font-size: 0.8em; } .fs-smaller-3 { font-size: 0.7em; }
+.fs-larger  { font-size: 1.1em; } .fs-larger-2  { font-size: 1.2em; } .fs-larger-3  { font-size: 1.3em; }
 .fs-8 { font-size: 8px; } .fs-9 { font-size: 9px; } .fs-10 { font-size: 10px; } .fs-11 { font-size: 11px; } .fs-12 { font-size: 12px; } .fs-14 { font-size: 14px; } .fs-16 { font-size: 16px; } .fs-18 { font-size: 18px; } .fs-20 { font-size: 20px; } .fs-22 { font-size: 22px; } .fs-24 { font-size: 24px; } .fs-26 { font-size: 26px; } .fs-28 { font-size: 28px; } .fs-30 { font-size: 30px; } .fs-35 { font-size: 35px; } .fs-40 { font-size: 40px; } .fs-45 { font-size: 45px; } .fs-50 { font-size: 50px; } .fs-55 { font-size: 55px; } .fs-60 { font-size: 60px; } .fs-70 { font-size: 70px; } .fs-80 { font-size: 80px; } .fs-90 { font-size: 90px; } .fs-100 { font-size: 100px; }
 
 /* margin */
