--- a/css/la.css
+++ b/css/la.css
@@ -7,18 +7,20 @@ body {
     margin: 0; 
 }
 
+p { margin: 0; }
+h1 { margin: 0; font-weight: bold; }
+h2 { margin: 0; font-weight: bold; }
+h3 { margin: 0; font-weight: 600; }
+
 button {
+    font-size: 0.95em;
+
     border: solid 1px black;
     border-radius: 5px;
     padding: 5px 10px;
 
     cursor: pointer;
 }
-
-p { margin: 0; }
-h1 { margin: 0; font-weight: bold; }
-h2 { margin: 0; font-weight: bold; }
-h3 { margin: 0; font-weight: 600; }
 
 input, textarea {
     font-size: 0.95em;
