--- a/css/la.css
+++ b/css/la.css
@@ -20,6 +20,7 @@ button {
     padding: 5px 10px;
 
     cursor: pointer;
+    user-select: none;
 }
 
 input, textarea {
@@ -203,6 +204,13 @@ select {
 .overflow-x-scroll { overflow-x: scroll; }
 .overflow-y-scroll { overflow-y: scroll; }
 .border-box { box-sizing: border-box; }
+.no-select {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 
 /* ico iiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiiii */
 .ico { 
