--- a/css/la.css
+++ b/css/la.css
@@ -14,6 +14,7 @@ h3 { margin: 0; font-weight: 600; }
 
 button {
     font-size: 0.95em;
+    font-weight: 500;
 
     border: solid 1px black;
     border-radius: 5px;
