--- a/css/la.css
+++ b/css/la.css
@@ -60,6 +60,11 @@ select {
 
 label[for] {
     cursor: pointer;
+    
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 /* scroll ----------------*/
