--- a/css/la.css
+++ b/css/la.css
@@ -60,7 +60,7 @@ select {
 
 label[for] {
     cursor: pointer;
-    
+
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
@@ -192,17 +192,18 @@ label[for] {
 .bold           { font-weight: 700; }
 
 /* Colors --- */
-.color-white     { color: white; }     .bg-color-white     { background-color: white; }
-.color-gray      { color: gray; }      .bg-color-gray      { background-color: gray; }
-.color-lightgray { color: lightgray; } .bg-color-lightgray { background-color: lightgray; }
-.color-black     { color: black; }     .bg-color-black     { background-color: black; }
-.color-red       { color: red; }       .bg-color-red       { background-color: red; }
-.color-green     { color: green; }     .bg-color-green     { background-color: green; }
-.color-limegreen { color: limegreen; } .bg-color-limegreen { background-color: limegreen; }
-.color-blue      { color: blue; }      .bg-color-blue      { background-color: blue; }
-.color-yellow    { color: yellow; }    .bg-color-yellow    { background-color: yellow; }
-.color-orange    { color: orange; }    .bg-color-orange    { background-color: orange; }
-.color-teal      { color: teal; }      .bg-color-teal      { background-color: teal; }
+.color-transparent { color: transparent; } .bg-color-transparent { background-color: transparent; }
+.color-white       { color: white; }     .bg-color-white       { background-color: white; }
+.color-gray        { color: gray; }      .bg-color-gray        { background-color: gray; }
+.color-lightgray   { color: lightgray; } .bg-color-lightgray   { background-color: lightgray; }
+.color-black       { color: black; }     .bg-color-black       { background-color: black; }
+.color-red         { color: red; }       .bg-color-red         { background-color: red; }
+.color-green       { color: green; }     .bg-color-green       { background-color: green; }
+.color-limegreen   { color: limegreen; } .bg-color-limegreen   { background-color: limegreen; }
+.color-blue        { color: blue; }      .bg-color-blue        { background-color: blue; }
+.color-yellow      { color: yellow; }    .bg-color-yellow      { background-color: yellow; }
+.color-orange      { color: orange; }    .bg-color-orange      { background-color: orange; }
+.color-teal        { color: teal; }      .bg-color-teal        { background-color: teal; }
 
 /* Misc --- */
 .pointer { cursor: pointer; }
