--- a/css/la.css
+++ b/css/la.css
@@ -198,12 +198,16 @@ label[for] {
 .color-lightgray   { color: lightgray; } .bg-color-lightgray   { background-color: lightgray; }
 .color-black       { color: black; }     .bg-color-black       { background-color: black; }
 .color-red         { color: red; }       .bg-color-red         { background-color: red; }
+.color-firebrick   { color: firebrick; } .bg-color-firebrick   { background-color: firebrick; }
 .color-green       { color: green; }     .bg-color-green       { background-color: green; }
 .color-limegreen   { color: limegreen; } .bg-color-limegreen   { background-color: limegreen; }
 .color-blue        { color: blue; }      .bg-color-blue        { background-color: blue; }
-.color-yellow      { color: yellow; }    .bg-color-yellow      { background-color: yellow; }
 .color-orange      { color: orange; }    .bg-color-orange      { background-color: orange; }
 .color-teal        { color: teal; }      .bg-color-teal        { background-color: teal; }
+.color-pink        { color: pink; }      .bg-color-pink        { background-color: pink; }
+.color-yellow      { color: yellow; }    .bg-color-yellow      { background-color: yellow; }
+.color-gold        { color: gold; }      .bg-color-gold        { background-color: gold; }
+.color-goldenrod   { color: goldenrod; } .bg-color-goldenrod   { background-color: goldenrod; }
 
 /* Misc --- */
 .pointer { cursor: pointer; }
